@@ -4,6 +4,9 @@ version 2.10.10:
 	Stuff:
 	* Stuff.
 
+	Finch:
+	* Fix build against Python 3. (Ed Catmur) (#15969)
+
 version 2.10.9 (2/2/2014):
 	XMPP:
 	* Fix problems logging into some servers including jabber.org and
